* Fixed invisible edit button on Light Mode

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -72,6 +72,10 @@ main#main-card {
     flex-flow: column;
 }
 
+.light .edit-content-text {
+    color: white !important;
+}
+
 .edit-content-text {
     display: none;
 }
